Solve logo image shape issue in splash config screen

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -58,7 +58,7 @@
                 <com.example.corechatoperationconfigapp.customviews.CustomMaterialCardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:cardAllCornerSize="@dimen/_5sdp"
+                    app:allCornerSize="@dimen/_5sdp"
                     app:cardBackgroundColor="@color/lightGray">
 
                     <ImageView
@@ -78,7 +78,7 @@
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:layout_weight="1"
                     android:clickable="false"
-                    app:cardAllCornerSize="@dimen/_5sdp"
+                    app:allCornerSize="@dimen/_5sdp"
                     app:strokeColor="@color/lightGray"
                     app:strokeWidth="@dimen/_1sdp">
 
@@ -97,7 +97,7 @@
                 <com.example.corechatoperationconfigapp.customviews.CustomMaterialCardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:cardAllCornerSize="@dimen/_5sdp"
+                    app:allCornerSize="@dimen/_5sdp"
                     app:cardBackgroundColor="@color/lightGray">
 
                     <ImageView
@@ -219,7 +219,7 @@
                 <com.example.corechatoperationconfigapp.customviews.CustomMaterialCardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:cardAllCornerSize="50%"
+                    app:allCornerSize="50%"
                     app:cardBackgroundColor="@color/lightGray">
 
                     <ImageView
@@ -238,7 +238,7 @@
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_weight="1"
                     android:clickable="false"
-                    app:cardAllCornerSize="50%"
+                    app:allCornerSize="50%"
                     app:strokeColor="@color/lightGray"
                     app:strokeWidth="@dimen/_1sdp">
 
@@ -276,7 +276,7 @@
                 <com.example.corechatoperationconfigapp.customviews.CustomMaterialCardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:cardAllCornerSize="50%"
+                    app:allCornerSize="50%"
                     app:cardBackgroundColor="@color/lightGray">
 
                     <ImageView
