--- a/app/src/main/res/layout/layout_group_public_support_groups_list_adapter.xml
+++ b/app/src/main/res/layout/layout_group_public_support_groups_list_adapter.xml
@@ -23,8 +23,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingBottom="@dimen/_6sdp"
-            app:cardAllCornerFamily="0"
-            app:cardAllCornerSize="@dimen/card_small_radius"
+            app:allCornerFamily="0"
+            app:allCornerSize="@dimen/card_small_radius"
             app:cardElevation="0dp"
             app:strokeColor="@color/gray"
             android:background="@{Color.parseColor(dynamicUIModel.themeColor.secondaryColor)}"
