--- a/app/src/main/res/layout/sender_chatbubble_shape_circle_tail.xml
+++ b/app/src/main/res/layout/sender_chatbubble_shape_circle_tail.xml
@@ -13,7 +13,7 @@
         android:layout_marginEnd="@dimen/_22sdp"
         app:cardPreventCornerOverlap="false"
         app:cardBackgroundColor="@color/colorPrimary"
-        app:cardAllCornerSize="50%">
+        app:allCornerSize="50%">
 
         <com.example.corechatoperationconfigapp.customviews.CustomTextView
             android:id="@+id/tv_chat_bubble"
