--- a/app/src/main/res/layout/activity_splash_config.xml
+++ b/app/src/main/res/layout/activity_splash_config.xml
@@ -47,16 +47,15 @@
                     android:layout_below="@id/tv_upload_logo_text"
                     android:layout_centerHorizontal="true"
                     android:layout_margin="@dimen/_10sdp"
-                    android:backgroundTint="@android:color/transparent"
                     app:cardElevation="0dp">
 
                     <ImageView
                         android:id="@+id/iv_logo"
                         android:layout_width="@dimen/_80sdp"
                         android:layout_height="@dimen/_80sdp"
+                        android:onClick="onClick"
                         android:src="@drawable/upload"
-                        tools:ignore="ContentDescription"
-                        android:onClick="onClick"/>
+                        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
 
                 </com.example.corechatoperationconfigapp.customviews.CustomMaterialCardView>
 
@@ -65,7 +64,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/cv_logo"
-                    android:layout_margin="@dimen/_10sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    android:layout_marginBottom="@dimen/_10sdp"
                     android:background="@drawable/bg_edit_text"
                     android:hint="@string/hint_organization_name"
                     android:imeOptions="actionDone"
@@ -74,7 +76,8 @@
                     android:padding="@dimen/_5sdp"
                     android:textColor="@color/darkGray"
                     android:textSize="@dimen/small_text_size"
-                    app:customEditTextFont="@string/Roboto_LightItalic" />
+                    app:customEditTextFont="@string/Roboto_LightItalic"
+                    tools:ignore="TouchTargetSizeCheck" />
 
                 <LinearLayout
                     android:id="@+id/ll_font_type"
@@ -95,7 +98,8 @@
                         android:entries="@array/dropdown_font_list_array"
                         android:overlapAnchor="false"
                         android:spinnerMode="dropdown"
-                        app:fontSpinner="@{R.array.dropdown_font_list_array}" />
+                        app:fontSpinner="@{R.array.dropdown_font_list_array}"
+                        tools:ignore="TouchTargetSizeCheck" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -158,13 +162,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/ll_font_type"
-                    android:layout_margin="@dimen/_10sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    android:layout_marginBottom="@dimen/_10sdp"
                     android:background="@drawable/bg_spinner"
                     android:dropDownWidth="match_parent"
                     android:entries="@array/dropdown_splash_font_size_array"
                     android:overlapAnchor="false"
                     android:spinnerMode="dropdown"
-                    app:customSpinner="@{R.array.dropdown_splash_font_size_array}" />
+                    app:customSpinner="@{R.array.dropdown_splash_font_size_array}"
+                    tools:ignore="TouchTargetSizeCheck" />
 
 
                 <LinearLayout
@@ -404,17 +412,18 @@
                     android:textSize="@dimen/medium_text_size"
                     app:customFont="@string/Roboto_Light" />
 
-                <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/spinner_bg_type"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_spinner"
-                    android:dropDownWidth="match_parent"
-                    android:entries="@array/dropdown_bg_array"
-                    android:overlapAnchor="false"
-                    android:spinnerMode="dropdown"
-                    app:customSpinner="@{R.array.dropdown_bg_array}" />
+                    <androidx.appcompat.widget.AppCompatSpinner
+                        android:id="@+id/spinner_bg_type"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/bg_spinner"
+                        android:dropDownWidth="match_parent"
+                        android:entries="@array/dropdown_bg_array"
+                        android:overlapAnchor="false"
+                        android:spinnerMode="dropdown"
+                        app:customSpinner="@{R.array.dropdown_bg_array}"
+                        tools:ignore="TouchTargetSizeCheck" />
 
                 </LinearLayout>
 
