--- a/app/src/main/res/layout/layout_search_filter.xml
+++ b/app/src/main/res/layout/layout_search_filter.xml
@@ -40,8 +40,8 @@
             android:gravity="center"
             android:orientation="vertical"
             app:cardElevation="0dp"
-            app:cardAllCornerFamily="0"
-            app:cardAllCornerSize="50%"
+            app:allCornerFamily="0"
+            app:allCornerSize="50%"
             app:cardBackgroundColor="@{Color.parseColor(dynamicUIModel.themeColor.primaryColor)}"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
